fix dark mode

--- a/apps/web/src/style/_fonts.scss
+++ b/apps/web/src/style/_fonts.scss
@@ -32,30 +32,33 @@
 	font-family: 'Inter', sans-serif;
 	font-weight: 700;
 	font-size: 2rem;
+	color: var(--color-font-primary);
 }
 
 @mixin font-sub-heading {
 	font-family: 'Inter';
 	font-weight: 500;
 	font-size: 1.25rem;
+	color: var(--color-font-primary);
 }
 
 @mixin font-body {
 	font-family: 'Inter';
 	font-weight: 400;
 	font-size: 1.125rem;
+	color: var(--color-font-primary);
 }
 
 @mixin font-button {
 	font-family: 'Inter';
 	font-weight: 600;
 	font-size: 1rem;
+	color: var(--color-font-primary);
 }
 
 @mixin font-small {
 	font-family: 'Inter';
 	font-weight: 300;
 	font-size: 0.875rem;
+	color: var(--color-font-primary);
 }
-
-// todo: refactor
